@@ -811,6 +811,7 @@ pointDetails.name=Name
 pointDetails.userAccess=User access
 pointDetails.username=Username
 pointDetails.accessType=AccessType
+pointDetails.useCache=Show cached data
 
 pointEdit.buttons.enable=Enable
 pointEdit.buttons.disable=Disable
