@@ -16,37 +16,46 @@ public class PointValueFacade {
     private final int dataPointId;
     private final DataPointRT point;
     private final PointValueDao pointValueDao;
+    private boolean useCache;
+    
+    public PointValueFacade(int dataPointId, boolean useCache) {
+        this.dataPointId = dataPointId;
+        point = Common.runtimeManager.getDataPoint(dataPointId);
+        pointValueDao = Common.databaseProxy.newPointValueDao();
+        this.useCache = useCache;
+    }
 
     public PointValueFacade(int dataPointId) {
         this.dataPointId = dataPointId;
         point = Common.runtimeManager.getDataPoint(dataPointId);
         pointValueDao = Common.databaseProxy.newPointValueDao();
+        this.useCache = true;
     }
-
+    
     //
     //
     // Single point value
     //
     public PointValueTime getPointValueBefore(long time) {
-        if (point != null)
+        if ((point != null)&&(useCache))
             return point.getPointValueBefore(time);
         return pointValueDao.getPointValueBefore(dataPointId, time);
     }
 
     public PointValueTime getPointValueAt(long time) {
-        if (point != null)
+    	if ((point != null)&&(useCache))
             return point.getPointValueAt(time);
         return pointValueDao.getPointValueAt(dataPointId, time);
     }
 
     public PointValueTime getPointValueAfter(long time) {
-        if (point != null)
+    	if ((point != null)&&(useCache))
             return point.getPointValueAfter(time);
         return pointValueDao.getPointValueAfter(dataPointId, time);
     }
 
     public PointValueTime getPointValue() {
-        if (point != null)
+    	if ((point != null)&&(useCache))
             return point.getPointValue();
         return pointValueDao.getLatestPointValue(dataPointId);
     }
@@ -56,19 +65,19 @@ public class PointValueFacade {
     // Point values lists
     //
     public List<PointValueTime> getPointValues(long since) {
-        if (point != null)
+    	if ((point != null)&&(useCache))
             return point.getPointValues(since);
         return pointValueDao.getPointValues(dataPointId, since);
     }
 
     public List<PointValueTime> getPointValuesBetween(long from, long to) {
-        if (point != null)
+    	if ((point != null)&&(useCache))
             return point.getPointValuesBetween(from, to);
         return pointValueDao.getPointValuesBetween(dataPointId, from, to);
     }
 
     public List<PointValueTime> getLatestPointValues(int limit) {
-        if (point != null)
+    	if ((point != null)&&(useCache))
             return point.getLatestPointValues(limit);
         return pointValueDao.getLatestPointValues(dataPointId, limit);
     }
